# CTF-server

./: manifest.yaml
client/: main.py  pyproject.toml
server/: Dockerfile  README.md  app.py  main.py  pyproject.toml
server/templates/: index.html
